# mlops_fleca_project

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.monitoring  Dockerfile.streamlit  LICENSE  Makefile  README.md  docker-compose.yml  models.dvc  pyproject.toml  pyproject.toml.bak  requirements.txt  setup.py  start_mlflow_server.bat  test_dvc.csv.dvc  test_dvc.txt.dvc
.dvc/: config
.github/workflows/: feature_pipeline.yaml  inference_pipeline.yaml  pipelines.yaml  test-pipelines.yaml  training_pipelineGridSearch.yaml
api/: main.py  routers.py  routes.py  schemas.py
data/: processed.dvc  raw.dvc
data/processed/: ts_X_bolleria_20250730.parquet.dvc  ts_X_bolleria_20250731.parquet.dvc  ts_X_bolleria_20250801.parquet.dvc  ts_X_bolleria_20250803.parquet.dvc  ts_X_bolleria_20250807.parquet.dvc  ts_X_bolleria_20250808.parquet.dvc  (+18 more)
docs/: Enfoque estructurado EDA.md  Forecasting de ventas en Hosteleria (EDA).md  cheatsheet_jupyter_poetry_setup.md  conf.py  feast_bigquery.md  feature_pipeline.txt
models/: catboost.pkl  linear_regression.pkl  random_forest.pkl  svm.pkl  xgboost.pkl  xgboost_2.pkl  xgboost_hopsworks.pkl  xgboost_optimized.pkl  xgboost_optimized_bolleria.pkl
notebooks/: 0.carga_datos_bigquery.ipynb  00_carga_datos_bigquery.ipynb  00_carga_datos_bigquery_bak.ipynb  00_descargar_datos_bq_all.ipynb  01_load_raw_data.ipynb  02_Eda.ipynb  03_feature_engineering_bolleria_semanal.ipynb  04_02_pipeline_raw_data_into_features_familia.ipynb  04_03_pipeline_raw_data_into_features.ipynb  04_pipeline_raw_data_into_features.ipynb  04_pipeline_raw_data_into_features_01.ipynb  04_pipeline_raw_data_into_features_02.ipynb  04_pipeline_raw_data_into_features_03.ipynb  05_train_baseline_model.ipynb  06_arima_model copy.ipynb  06_train_baseline_model.ipynb  07_linear_reg_model.ipynb  08_random_forest_model.ipynb  08_svm_model.ipynb  09_random_forest_model.ipynb  10_01_xgboost_model.ipynb  10_02_xgboost_model_GridSearch.ipynb  10_03_xgboost_model_optimized_optuna.ipynb  10_xgboost_model copy.ipynb  10_xgboost_model.ipynb  11_catboost_model.ipynb  12_backfill_feature_store_hopsworks.ipynb  13_feature_pipeline copy.ipynb  13_feature_pipeline.ipynb  13_feature_pipeline_historico_completo.ipynb  13_feature_pipeline_last_week.ipynb  14_1_training_pipeline_MLFlow.ipynb  14_2_training_pipeline_MLFlow_dagshub.ipynb  14_training_pipeline copy.ipynb  14_training_pipeline.ipynb  14_training_pipeline_GridSearch.ipynb  15_0_inference_pipeline.ipynb  15_1_inference_pipeline_MLFlow.ipynb  15_inference_pipeline.ipynb  1_load_raw_data.ipynb  (+13 more)
src/: api_client.py  config.py  data.py  data_split.py  data_utils.py  data_utils_02.py  frontend.py  frontend_fast_api.py  frontend_monitoring.py  frontend_v2.py  hopsworks_utils.py  inference.py  model.py  monitoring_dashboard.py  paths.py  visualizaciones.py
(+222 files in other folders)
