
[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = "Proyecto del curso MLOps de Nood3r"
authors = ["Jordi Quiroga <jordi@jordiquiroga.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = ">=2.2.3,<3.0.0"
pyarrow = ">=19.0.1,<20.0.0"
matplotlib = ">=3.10.1,<4.0.0"
statsmodels = ">=0.14.4,<0.15.0"
google-cloud-bigquery = ">=3.34.0,<4.0.0"
db-dtypes = ">=1.4.3,<2.0.0"
seaborn = ">=0.13.2,<0.14.0"
nbconvert = ">=7.16.6,<8.0.0"
jupyter = ">=1.1.1,<2.0.0"

