[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = "Proyecto del curso MLOps de Nood3r"
authors = ["Jordi Quiroga <jordi@jordiquiroga.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = ">=2.2.3,<3.0.0"
pyarrow = ">=21.0.0,<22.0.0"
matplotlib = ">=3.10.1,<4.0.0"
statsmodels = ">=0.14.4,<0.15.0"
google-cloud-bigquery = ">=3.34.0,<4.0.0"
db-dtypes = ">=1.4.3,<2.0.0"
seaborn = ">=0.13.2,<0.14.0"
numpy = "<2.0.0"
scipy = ">=1.15.2,<2.0.0"
scikit-learn = "^1.7.1"
xgboost = "^3.0.3"
lightgbm = "^4.6.0"
catboost = "^1.2.8"
optuna = "^4.4.0"
hopsworks = "^4.3.1"
python-dotenv = "^1.1.1"
confluent-kafka = "^2.11.0"
streamlit = "^1.48.1"
mlflow = "^3.3.1"
dvc = "^3.62.0"
dagshub = "^0.6.3"
shap = "^0.48.0"

[tool.poetry.group.dev.dependencies]
# Herramientas de desarrollo
black = "^23.1"
isort = "^5.12"
pylint = "^2.17"
pytest = "^7.3"

# Herramientas para notebooks
jupyter = ">=1.1.1,<2.0.0"
jupyterlab = ">=4.3.6,<5.0.0"
ipykernel = ">=6.29.5,<7.0.0"
ipywidgets = ">=8.1.7,<9.0.0"
nbconvert = ">=7.16.6,<8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
